@@ -1,3 +1,9 @@
+2007-01-31  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* mode-info.el (mode-info-default-class-name): Follow parent major
+	modes when a derived major mode is used as the current major mode,
+	to select a default mode-info class.
+
 2006-12-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* mi-elisp.el: Changes to keep compatibility between a file
